@@ -28,6 +28,10 @@
 	under the generic names "monospace", "sans", and
 	"serif".</li>
 
+	<li>Added "--referer" command-line option and
+	corresponding CGI-mode support to pass Referer:
+	information in HTTP requests (STR #91)</li>
+
 	<H3 _HD_OMIT_TOC>Changes</H3>
 
 	<li>On Windows, HTMLDOC now logs CGI mode errors to a file
